--- a/templates/Reservation/form.html.twig
+++ b/templates/Reservation/form.html.twig
@@ -182,8 +182,9 @@
         </div>
     </div>
 {% endfor %}
-</div>
 
+</div>
+{{ knp_pagination_render(seances) }}
 <style>
     .expired-message-container {
         position: absolute;
