--- a/templates/Front.html.twig
+++ b/templates/Front.html.twig
@@ -89,9 +89,10 @@
         </div>
         <nav class="canvas-menu mobile-menu">
             <ul>
+            display_front
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="{{ path('app_reserva_i') }}">Reservation</a></li>
-                <li><a href="./classes.html">Classes</a></li>
+                <li><a href="./classes.html">evenement</a></li>
                 <li><a href="./services.html">Services</a></li>
                 <li><a href="./team.html">Our Team</a></li>
                 <li><a href="#">Pages</a>
@@ -113,7 +114,15 @@
             <a href="#"><i class="fa fa-facebook"></i></a>
             <a href="#"><i class="fa fa-twitter"></i></a>
             <a href="#"><i class="fa fa-youtube-play"></i></a>
-            <a href="#"><i class="fa fa-instagram"></i></a>
+             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+            <li><a class="dropdown-item" href="#!">Settings</a></li>
+            <li><a class="dropdown-item" href="#!">Activity Log</a></li>
+            <li><hr class="dropdown-divider" /></li>
+            <li><a class="dropdown-item" href="{{ path('app_logout') }}">Logout</a></li>
+                    </ul>
+                </li>
+            </ul>
+           
         </div>
     </div>
 
