--- a/templates/Reservation/form.html.twig
+++ b/templates/Reservation/form.html.twig
@@ -44,7 +44,7 @@
             <ul>
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="{{ path('app_seance_i') }}">Reservation</a></li>
-                <li><a href="./classes.html">Classes</a></li>
+                <li><a href="./classes.html">Evenement</a></li>
                 <li><a href="./services.html">Services</a></li>
                 <li><a href="./team.html">Our Team</a></li>
                 <li><a href="#">Pages</a>
@@ -67,6 +67,7 @@
             <a href="#"><i class="fa fa-twitter"></i></a>
             <a href="#"><i class="fa fa-youtube-play"></i></a>
             <a href="#"><i class="fa fa-instagram"></i></a>
+            
         </div>
     </div>
     <!-- Offcanvas Menu Section End -->
@@ -85,23 +86,19 @@
                 <div class="col-lg-6">
                     <nav class="nav-menu">
                         <ul>
+            
                             <li><a href="./index.html">Home</a></li>
-                            <li class="active"><a href="{{ path('app_seance_i') }}">Reservation</a></li>
-                            <li><a href="./class-details.html">Classes</a></li>
-                            <li><a href="./services.html">Services</a></li>
-                            <li><a href="./team.html">Our Team</a></li>
-                            <li><a href="#">Pages</a>
+                            <li class="active"><a href="{{ path('app_reserv_i') }}">Reservation</a></li>
+                            <li><a href="{{ path('display_front') }}">Events</a></li>
+                            <li><a href="{{ path('app_client_newF') }}">coaching</a></li>
+                           
+                            <li><a href="{{ path('app_produit_front') }}">Produits</a>
                                 <ul class="dropdown">
-                                    <li><a href="{{ path('app_seance_i') }}">About us</a></li>
-                                    <li><a href="./class-timetable.html">Classes timetable</a></li>
-                                    <li><a href="./bmi-calculator.html">Bmi calculate</a></li>
-                                    <li><a href="./team.html">Our team</a></li>
-                                    <li><a href="./gallery.html">Gallery</a></li>
-                                    <li><a href="./blog.html">Our blog</a></li>
-                                    <li><a href="./404.html">404</a></li>
+                                    <li><a href="{{ path('app_cart') }}">Checkout</a></li>
+                                 
                                 </ul>
                             </li>
-                            <li><a href="./contact.html">Contact</a></li>
+                            <li><a href="{{ path('app_logout') }}">LOGOUT</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -115,6 +112,7 @@
                             <a href="#"><i class="fa fa-twitter"></i></a>
                             <a href="#"><i class="fa fa-youtube-play"></i></a>
                             <a href="#"><i class="fa fa-instagram"></i></a>
+                             
                         </div>
                     </div>
                 </div>
