--- a/templates/seance/read.html.twig
+++ b/templates/seance/read.html.twig
@@ -109,7 +109,7 @@ $(document).ready(function() {
             var query = $('#searchInput').val();
             console.log(query);
             $.ajax({
-                url: '{{ path('backrechercheAjax') }}',
+                url: '{{ path('backrechercheAjaxx') }}',
                 type: 'GET',
                 data: { q: query },
                 success: function(response) {
