--- a/templates/categorie/ajouterCategorie.html.twig
+++ b/templates/categorie/ajouterCategorie.html.twig
@@ -31,6 +31,7 @@
                                 <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                                 Dashboard
                             </a>
+                            
                             <div class="sb-sidenav-menu-heading">Actions</div>
                             <!-- Produit Ajouter Link -->
                            <a class="nav-link" href="{{ path('app_produit_ajouter') }}">
@@ -45,6 +46,19 @@
                              <a class="nav-link" href="{{ path('app_comande') }}">
                                 <div class="sb-nav-link-icon"><i class="fas fa-tags"></i></div>
                                 Ajouter commande
+                            </a>
+                              <a class="nav-link" href="{{ path('app_seance_i') }}">
+                                <div class="sb-nav-link-icon"><i class="fas fa-plus-square"></i></div>
+                                Reservation
+                            </a>
+                            <!-- Categorie Ajouter Link -->
+                            <a class="nav-link" href="{{ path('display_evenment') }}">
+                                <div class="sb-nav-link-icon"><i class="fas fa-tags"></i></div>
+                                Evenment
+                            </a>
+                             <a class="nav-link" href="{{ path('app_comande') }}">
+                                <div class="sb-nav-link-icon"><i class="fas fa-tags"></i></div>
+                                coaching
                             </a>
                         </div>
                     </div>
