--- a/templates/produit/ajouterProduit.html.twig
+++ b/templates/produit/ajouterProduit.html.twig
@@ -251,6 +251,8 @@ document.addEventListener("DOMContentLoaded", function() {
     });
 });
 </script>
+
+ <a href="{{ path('app_categorie_ajouter') }}" class="btn btn-primary">liste des categories</a>
 <style>
 .pagination-wrapper {
     text-align: center; /* Pour centrer les boutons de pagination */
