--- a/templates/produit/frontProduit.html.twig
+++ b/templates/produit/frontProduit.html.twig
@@ -97,7 +97,7 @@
                                  
                                 </ul>
                             </li>
-                             <li><a href="{{ path('reclamation_new') }}">Reclamation</a></li>
+                             <li><a href="{{ path('reclamation') }}">Reclamation</a></li>
                             <li><a href="{{ path('app_logout') }}">LOGOUT</a></li>
                         </ul>
                     </nav>
