--- a/templates/Front.html.twig
+++ b/templates/Front.html.twig
@@ -220,7 +220,7 @@
                 <div class="col-lg-12">
                     <div class="section-title">
                         <span>Why chose us?</span>
-                        <h2>PUSH YOUR LIMITS FORWARD</h2>
+                        <h2>Choose Your Best Reservation</h2>
                     </div>
                 </div>
             </div>
