--- a/templates/front55.html.twig
+++ b/templates/front55.html.twig
@@ -40,16 +40,16 @@
             <i class="fa fa-search"></i>
         </div>
         
-        <nav class="canvas-menu mobile-menu">
+      <nav class="canvas-menu mobile-menu">
             <ul>
                 <li><a href="./index.html">Home</a></li>
-                <li><a href="{{ path('app_reserv_i') }}">Reservation</a></li>
+                <li><a href="{{ path('app_seance_i') }}">Reservation</a></li>
                 <li><a href="./classes.html">Evenement</a></li>
                 <li><a href="./services.html">Services</a></li>
                 <li><a href="./team.html">Our Team</a></li>
                 <li><a href="#">Pages</a>
                     <ul class="dropdown">
-                        <li><a href="{{ path('app_reserv_i') }}">Reservation</a></li>
+                        <li><a href="{{ path('app_seance_i') }}">Reservation</a></li>
                         <li><a href="./class-timetable.html">Classes timetable</a></li>
                         <li><a href="./bmi-calculator.html">Bmi calculate</a></li>
                         <li><a href="./team.html">Our team</a></li>
@@ -82,26 +82,22 @@
                         </a>
                     </div>
                 </div>
-                <div class="col-lg-6">
+                 <div class="col-lg-6">
                     <nav class="nav-menu">
                         <ul>
-                            <li class="active"><a href="./index.html">Home</a></li>
-                            <li><a href="{{ path('app_reserv_i') }}">Reservation</a></li>
-                            <li><a href="./class-details.html">Classes</a></li>
-                            <li><a href="./services.html">Services</a></li>
-                            <li><a href="./team.html">Our Team</a></li>
-                            <li><a href="#">Pages</a>
+            
+                            <li  class="active"><a href="{{ path('app_main') }}">Home</a></li>
+                            <li ><a href="{{ path('app_reserv_i') }}">Reservation</a></li>
+                            <li><a href="{{ path('display_front') }}">Events</a></li>
+                            <li><a href="{{ path('app_client_newF') }}">coaching</a></li>
+                           
+                            <li><a href="{{ path('app_produit_front') }}">Produits</a>
                                 <ul class="dropdown">
-                                    <li><a href="./about-us.html">About us</a></li>
-                                    <li><a href="./class-timetable.html">Classes timetable</a></li>
-                                    <li><a href="./bmi-calculator.html">Bmi calculate</a></li>
-                                    <li><a href="./team.html">Our team</a></li>
-                                    <li><a href="./gallery.html">Gallery</a></li>
-                                    <li><a href="./blog.html">Our blog</a></li>
-                                    <li><a href="./404.html">404</a></li>
+                                    <li><a href="{{ path('app_cart') }}">Checkout</a></li>
+                                 
                                 </ul>
                             </li>
-                            <li><a href="./contact.html">Contact</a></li>
+                            <li><a href="{{ path('app_logout') }}">LOGOUT</a></li>
                         </ul>
                     </nav>
                 </div>
